- MF43: Fixed bug #31072 (var_export() does not output an array element with an   empty string key). (Derick)